Fix overlapping description bug on subtitle view (cherry picked from commit 506eb167b9c63b66f72767b3ccb6a15498ca1a57)

--- a/media/css/v1.scss
+++ b/media/css/v1.scss
@@ -1908,7 +1908,7 @@ pre.dump {
 .truncated {
     overflow: hidden;
     position: relative;
-    z-index: 50;
+    z-index: 1;
 }
 a.truncated-expand {
     background: #F3F6F8;
@@ -1916,7 +1916,7 @@ a.truncated-expand {
     margin-top: 10px;
     padding: 8px 10px;
     position: relative;
-    z-index: 51;
+    z-index: 2;
     @include box-shadow(-6px, -23px, 17px, white);
     @include border-radius();
 
